--- a/using_h2o.ipynb
+++ b/using_h2o.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -13,18 +13,18 @@
       "Attempting to start a local H2O server...\n",
       "  Java Version: openjdk version \"1.8.0_171\"; OpenJDK Runtime Environment (build 1.8.0_171-8u171-b11-0ubuntu0.17.10.1-b11); OpenJDK 64-Bit Server VM (build 25.171-b11, mixed mode)\n",
       "  Starting server from /usr/local/lib/python3.6/dist-packages/h2o/backend/bin/h2o.jar\n",
-      "  Ice root: /tmp/tmpl41okb60\n",
-      "  JVM stdout: /tmp/tmpl41okb60/h2o_nap_started_from_python.out\n",
-      "  JVM stderr: /tmp/tmpl41okb60/h2o_nap_started_from_python.err\n",
-      "  Server is running at http://127.0.0.1:54323\n",
-      "Connecting to H2O server at http://127.0.0.1:54323... successful.\n"
+      "  Ice root: /tmp/tmp8esq21gi\n",
+      "  JVM stdout: /tmp/tmp8esq21gi/h2o_nap_started_from_python.out\n",
+      "  JVM stderr: /tmp/tmp8esq21gi/h2o_nap_started_from_python.err\n",
+      "  Server is running at http://127.0.0.1:54321\n",
+      "Connecting to H2O server at http://127.0.0.1:54321... successful.\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "<div style=\"overflow:auto\"><table style=\"width:50%\"><tr><td>H2O cluster uptime:</td>\n",
-       "<td>02 secs</td></tr>\n",
+       "<td>11 secs</td></tr>\n",
        "<tr><td>H2O cluster timezone:</td>\n",
        "<td>Asia/Kolkata</td></tr>\n",
        "<tr><td>H2O data parsing timezone:</td>\n",
@@ -32,9 +32,9 @@
        "<tr><td>H2O cluster version:</td>\n",
        "<td>3.20.0.3</td></tr>\n",
        "<tr><td>H2O cluster version age:</td>\n",
-       "<td>6 days </td></tr>\n",
+       "<td>10 days </td></tr>\n",
        "<tr><td>H2O cluster name:</td>\n",
-       "<td>H2O_from_python_nap_9ir61h</td></tr>\n",
+       "<td>H2O_from_python_nap_bp0o7b</td></tr>\n",
        "<tr><td>H2O cluster total nodes:</td>\n",
        "<td>1</td></tr>\n",
        "<tr><td>H2O cluster free memory:</td>\n",
@@ -46,7 +46,7 @@
        "<tr><td>H2O cluster status:</td>\n",
        "<td>accepting new members, healthy</td></tr>\n",
        "<tr><td>H2O connection url:</td>\n",
-       "<td>http://127.0.0.1:54323</td></tr>\n",
+       "<td>http://127.0.0.1:54321</td></tr>\n",
        "<tr><td>H2O connection proxy:</td>\n",
        "<td>None</td></tr>\n",
        "<tr><td>H2O internal security:</td>\n",
@@ -58,18 +58,18 @@
       ],
       "text/plain": [
        "--------------------------  ----------------------------------------\n",
-       "H2O cluster uptime:         02 secs\n",
+       "H2O cluster uptime:         11 secs\n",
        "H2O cluster timezone:       Asia/Kolkata\n",
        "H2O data parsing timezone:  UTC\n",
        "H2O cluster version:        3.20.0.3\n",
-       "H2O cluster version age:    6 days\n",
-       "H2O cluster name:           H2O_from_python_nap_9ir61h\n",
+       "H2O cluster version age:    10 days\n",
+       "H2O cluster name:           H2O_from_python_nap_bp0o7b\n",
        "H2O cluster total nodes:    1\n",
        "H2O cluster free memory:    3.453 Gb\n",
        "H2O cluster total cores:    8\n",
        "H2O cluster allowed cores:  8\n",
        "H2O cluster status:         accepting new members, healthy\n",
-       "H2O connection url:         http://127.0.0.1:54323\n",
+       "H2O connection url:         http://127.0.0.1:54321\n",
        "H2O connection proxy:\n",
        "H2O internal security:      False\n",
        "H2O API Extensions:         XGBoost, Algos, AutoML, Core V3, Core V4\n",
@@ -79,20 +79,12 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Parse progress: |█████████████████████████████████████████████████████████| 100%\n"
-     ]
     }
    ],
    "source": [
     "import h2o\n",
     "from h2o.estimators.gbm import H2OGradientBoostingEstimator\n",
-    "h2o.init()\n",
-    "train = h2o.import_file(\"data/train.csv\")"
+    "h2o.init()"
    ]
   },
   {
